--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "elm": "^0.19.0-no-deps",
-    "elm-analyse": "^0.16.4",
-    "elm-test": "^0.19.0-rev6"
+    "elm": "^0.19.1-3",
+    "elm-analyse": "^0.16.5",
+    "elm-test": "^0.19.1-revision2"
   }
 }
